<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    tools:context=".ui.about.AboutActivity"
    tools:ignore="MissingPrefix">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_bar"
        android:theme="@style/ToolbarTheme"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="About"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="#ffff"
                android:layout_marginTop="10dp"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/about_title_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="Libraries"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/container_about_library1"
                        style="@style/about_library">

                        <TextView
                            style="@style/about_title_text"
                            android:text="@string/about_library1_title" />

                        <TextView
                            style="@style/about_subtitle_text"
                            android:text="@string/about_library1_subtitle" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EEEE" />

                    <LinearLayout
                        android:id="@+id/container_about_library2"
                        style="@style/about_library">

                        <TextView
                            style="@style/about_title_text"
                            android:text="@string/about_library2_title" />

                        <TextView
                            style="@style/about_subtitle_text"
                            android:text="@string/about_library2_subtitle" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EEEE" />

                    <LinearLayout
                        android:id="@+id/container_about_library3"
                        style="@style/about_library">

                        <TextView
                            style="@style/about_title_text"
                            android:text="@string/about_library3_title" />

                        <TextView
                            style="@style/about_subtitle_text"
                            android:text="@string/about_library3_subtitle" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EEEE" />

                    <LinearLayout
                        android:id="@+id/container_about_library4"
                        style="@style/about_library">

                        <TextView
                            style="@style/about_title_text"
                            android:text="@string/about_library4_title" />

                        <TextView
                            style="@style/about_subtitle_text"
                            android:text="@string/about_library4_subtitle" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EEEE" />

                    <LinearLayout
                        android:id="@+id/container_about_library5"
                        style="@style/about_library">

                        <TextView
                            style="@style/about_title_text"
                            android:text="@string/about_library5_title" />

                        <TextView
                            style="@style/about_subtitle_text"
                            android:text="@string/about_library5_subtitle" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EEEE" />

                    <LinearLayout
                        android:id="@+id/container_about_library6"
                        style="@style/about_library">

                        <TextView
                            style="@style/about_title_text"
                            android:text="@string/about_library6_title" />

                        <TextView
                            style="@style/about_subtitle_text"
                            android:text="@string/about_library6_subtitle" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EEEE" />

                    <LinearLayout
                        android:id="@+id/container_about_library7"
                        style="@style/about_library">

                        <TextView
                            style="@style/about_title_text"
                            android:text="@string/about_library7_title" />

                        <TextView
                            style="@style/about_subtitle_text"
                            android:text="@string/about_library7_subtitle" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EEEE" />

                    <LinearLayout
                        android:id="@+id/container_about_library9"
                        style="@style/about_library">

                        <TextView
                            style="@style/about_title_text"
                            android:text="@string/about_library9_title" />

                        <TextView
                            style="@style/about_subtitle_text"
                            android:text="@string/about_library9_subtitle" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EEEE" />

                    <LinearLayout
                        android:id="@+id/container_about_library10"
                        style="@style/about_library">

                        <TextView
                            style="@style/about_title_text"
                            android:text="@string/about_library10_title" />

                        <TextView
                            style="@style/about_subtitle_text"
                            android:text="@string/about_library10_subtitle" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EEEE" />

                    <LinearLayout
                        android:id="@+id/container_about_library11"
                        style="@style/about_library">

                        <TextView
                            style="@style/about_title_text"
                            android:text="@string/about_library11_title" />

                        <TextView
                            style="@style/about_subtitle_text"
                            android:text="@string/about_library11_subtitle" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EEEE" />

                    <LinearLayout
                        android:id="@+id/container_about_library12"
                        style="@style/about_library">

                        <TextView
                            style="@style/about_title_text"
                            android:text="@string/about_library12_title" />

                        <TextView
                            style="@style/about_subtitle_text"
                            android:text="@string/about_library12_subtitle" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EEEE" />

                    <LinearLayout
                        android:id="@+id/container_about_library13"
                        style="@style/about_library">

                        <TextView
                            style="@style/about_title_text"
                            android:text="@string/about_library13_title" />

                        <TextView
                            style="@style/about_subtitle_text"
                            android:text="@string/about_library13_subtitle" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EEEE" />

                    <LinearLayout
                        android:id="@+id/container_about_library14"
                        style="@style/about_library">

                        <TextView
                            style="@style/about_title_text"
                            android:text="@string/about_library14_title" />

                        <TextView
                            style="@style/about_subtitle_text"
                            android:text="@string/about_library14_subtitle" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
